--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,6 @@ img {
     display: flex;
 }
 
-.navbar .logo {
-    font-weight: 600;
-    font-size: 1.5rem;
-    color: var(--primary-color);
-}
-
 .navbar ul li a {
     padding: 10px 20px;
     display: block;
@@ -73,9 +67,7 @@ img {
 }
 
 .navbar .logo {
-    font-weight: 600;
-    font-size: 1.7rem;
-    color: var(--primary-color);
+    max-width: 90px;
 }
 
 /* Hero */
