--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,12 @@ img {
     margin-bottom: 20px;
 }
 
+.projects .project-card-skills {
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
 /* Footer */
 .footer {
     background-color: var(--dark-color);
